# crops-growth-monitoring

./: .env.template  .gitignore  README.md  backlog.md  docker-compose-db.yaml  pyproject.toml  run_pipeline_compute_pending_parcels_index.py  run_pipeline_request_sentinel_2_data.py  tox.ini
alembic/: env.py
alembic/init_scripts/: load_sample_rpg_data.py
alembic/versions/: 2ade7287c0aa_create_parcel_table.py  2ade7287c0aa_create_parcels_table.py  2ade7287c0aa_create_rpg_table.py  7ec9b5033fe3_create_transactional_tables_for_queries.py  7ec9b5033fe3_create_transactional_tables_for_requests.py  7ec9b5033fe3_create_transactional_tables_for_stac_.py  cb3108b7e5d3_create_table_for_parcels_index.py
cgm/: constants.py  logger.py
cgm/database/: models.py  requests.py  session.py
cgm/pipelines/: compute_pending_parcels_index.py  request_sentinel_2_data.py
conf/: logs.yaml
notebooks/: poc.ipynb
sampled_rpg_data/: maize.csv  tournesol.csv
src/: run_pipeline_compute_pending_parcels_index.py
